# mongodb_tutorial

./: README.md  pyproject.toml
mongodb_basic_operations/: basic_operations.py  main.py  mongo_utils.py
mongodb_examples/: aggregations.py  authentication.py  basic_operations.py  custom_type_example.py  main.py
mongodb_tutorial/: aggregations.py  basic_operations.py  main.py  mongo_utils.py
